# CourseWork-Lite

./: .gitignore  README.md  package.json  pyproject.toml  testing-plan.md
backend/: .env.example  .python-version  README.md  auth.py  database.py  main.py  pyproject.toml  requirements.txt
backend/routers/: courses.py  tasks.py  users.py
backend/tests/: seed_db.py  test_api.py  test_courses.py  test_tasks.py  test_users.py  wipe_db.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.integration.test.jsx  App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  axios.js
frontend/src/components/: AddCourseModal.jsx  AddTaskModal.jsx  EditCourseModal.jsx  EditTaskModal.jsx  Navbar.jsx  ProtectedRoute.jsx  Reminders.jsx  Sidebar.jsx  TaskList.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AccountSettingsPage.jsx  Course.jsx  Dashboard.jsx  LandingPage.jsx  Login.jsx  LoginPage.jsx  Profile.jsx  Register.jsx  RegisterPage.jsx  Task.jsx
frontend/src/pages/__test__/: LoginPage.test.jsx  README.md
frontend/src/styles/: AccountSettingsPage.css  AuthForm.css  Course.css  CreationForms.css  Dashboard.css  LandingPage.css  LoginPage.css  Profile.css  RegisterPage.css  Task.css
src/: App.js
src/components/: CourseList.js  CreateCourseForm.js  LoginForm.js  ReminderBanner.js  TaskFilter.js  TaskList.js
